<resources>
    <string name="app_name">SiusProject</string>
    <string name="event_name">Wydarzenie</string>
    <string name="competition_name">Konkurencja</string>
    <string name="city">Miasto</string>
    <string name="start_date">Data Rozpoczęcia</string>
    <string name="end_date">Data Zakończenia</string>
    <string name="shooter_name">Zawodnik</string>
    <string name="results_name">Wyniki</string>

    <string name="shooter_name_label">Imię</string>
    <string name="shooter_surname_label">Nazwisko</string>
    <string name="shooter_birthdate_label">Data Urodzenia</string>
    <string name="shooter_nationality_label">Narodowość</string>

    <string name="events_updated">Wydarzenia Zaktualizowane</string>
</resources>
