<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/shooter_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            style="@style/titles_style"
            android:text="@string/shooter_name_label"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/shooter_name"
            style="@style/under_titles_style" />

        <TextView
        style="@style/titles_style"
        android:text="@string/shooter_surname_label"
        android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/shooter_surname"
            style="@style/under_titles_style" />

        <TextView
            style="@style/titles_style"
            android:text="@string/shooter_birthdate_label"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/shooter_birthdate"
            style="@style/under_titles_style" />

        <TextView
            style="@style/titles_style"
            android:text="@string/shooter_nationality_label"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/shooter_nationality"
            style="@style/under_titles_style" />
    </LinearLayout>

    <ListView
        android:id="@+id/shootsListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shooter_info"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>