<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            style="@style/titles_style"
            android:text="@string/competition_name"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/competition_name"
            style="@style/under_titles_style"
            android:textAlignment="viewStart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            style="@style/date_style_title"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/start_date_competition"
            style="@style/date_style" />

        <TextView
            style="@style/date_style_title"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/end_date_competition"
            style="@style/date_style" />
    </LinearLayout>
</LinearLayout>